--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -83,9 +83,8 @@
   justify-content: center;
   gap: 1rem;
   margin-bottom: 3rem;
-  position: fixed;
-  bottom: 0;
-  left: 20px;
+  position: relative;
+
   width: 100%;
 }
 
