--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -2,6 +2,8 @@
     height: 100vh;
     width: 100%;
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
