--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -56,7 +56,7 @@
   margin: 0;
   padding: 80px 0;
   list-style: none;
-  background-color: #d44378b5;
+  background-color: #f7b0b6;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
   transition-duration: .25s;
 }
